--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -10,7 +10,7 @@ Important: class schedule is subject to change, contingent on mitigating circums
 
 # Unit 1: Distributions
 
-## Lecture 1.1: Class welcome (Wednesday, March 20)
+## Lecture 1.1: Class welcome (Tuesday, August 20)
 
 Reading to do before class: Chapter 1, 2.1 and 2.2, and 3
 
@@ -20,12 +20,12 @@ Topics covered:
 -   How to display quantitative and qualitative variables
 -   Contingency tables
 
-## Lab 1.1: R and Quarto familiarization (Thursday, March 21)
+## Lab 1.1: R and Quarto familiarization (Wednesday, August 21)
 
 -   Lab files: [Lab 1.1]
     -   Make sure to extract (unzip) the lab files before attempting to modify them!
 
-## Lecture 1.2: Characteristics of distributions (Friday, March 22)
+## Lecture 1.2: Characteristics of distributions (Thursday, August 22)
 
 Reading to do before class: Chapter 2.3-5 and 4
 
@@ -41,12 +41,12 @@ Topics covered:
 
 -   Lecture activity: [Lecture 1.2 activity]
 
-## Online lab 1.1 (due Sunday, March 24 at 11:59:00 pm)
+## Online lab 1.1 (due Sunday, March 25 at 11:59:00 pm)
 
 -   [Introduction to R](https://learn.datacamp.com/courses/free-introduction-to-r)
 -   [Introduction to the Tidyverse](https://learn.datacamp.com/courses/introduction-to-the-tidyverse)
 
-## Lecture 1.3: Comparing distributions and the Normal distribution (Monday, March 25)
+## Lecture 1.3: Comparing distributions and the Normal distribution (Tuesday, August 27)
 
 Reading to do before class: Chapter 5
 
@@ -62,19 +62,19 @@ Topics covered:
 
 -   Lecture activity: [Lecture 1.3 activity]
 
-## Lab 1.2: Advanced Quarto editing (Tuesday, March 26)
+## Lab 1.2: Advanced Quarto editing (Wednesday, August 28)
 
 -   Lab files: [Lab 1.2]
     -   Make sure to extract (unzip) the lab files before attempting to modify them!
 
-## Unit 1 homework (due March 31 at 23:59:00 pm)
+## Unit 1 homework (due September 1 at 23:59:00 pm)
 
 -   Homework files: [Unit 1 homework]
 -   Homework sample solutions: [Unit 1 homework sample solutions]
 
 # Unit 2: Relationships between variables
 
-## Lecture 2.1: Association and correlation (Wednesday, March 27)
+## Lecture 2.1: Association and correlation (Thursday, August 29)
 
 Reading to do before class: Chapter 6
 
@@ -90,11 +90,11 @@ Topics covered:
 
 -   Lecture activity: [Lecture 2.1 activity]
 
-## Online lab 2.1 (due on Friday, March 29 at 23:59:00)
+## Online lab 2.1 (due on Friday, August 30 at 23:59:00)
 
 -   [Introduction to Data Visualization with ggplot2](https://learn.datacamp.com/courses/introduction-to-data-visualization-with-ggplot2)
 
-## Lecture 2.2: Simple Linear Regression (Monday, April 1)
+## Lecture 2.2: Simple Linear Regression (Tuesday, September 3)
 
 Reading to do before class: Chapter 7
 
@@ -112,12 +112,20 @@ Topics covered:
 
 -   Lecture activity: [Lecture 2.2 activity]
 
-## Lab 2.1: Working with regressions (Tuesday, April 2)
+## Online lab 2.2 (due on Friday, September 6 at 23:59:00)
+
+-   [Intermediate Data Visualization with ggplot2](https://app.datacamp.com/learn/courses/intermediate-data-visualization-with-ggplot2)
+
+## Unit 2 homework - progress check (due Sunday, September 8 at 23:59:00)
+
+-   Homework files: [Unit 2 homework instructions]
+
+## Lab 2.1: Working with regressions (Wednesday, September 11)
 
 -   Lab files: [Lab 2.1](labs/Lab 2.1/lab.2.1.zip)
     -   Make sure to extract (unzip) the lab files before attempting to modify them!
 
-## Lecture 2.3: Regression Wisdom (Wednesday, April 3)
+## Lecture 2.3: Regression Wisdom (Thursday, September 12)
 
 Reading to do before class: Chapter 8
 
@@ -135,15 +143,9 @@ Topics covered:
 
 -   Lecture activity: [Lecture 2.3 activity]
 
-## Online lab 2.2 (due on Friday, April 5 at 23:59:00)
+## Lecture 2.4: Multiple Regression (Friday, September 13 @ 10:00 am)
 
--   [Working with Dates and Times in R](https://www.datacamp.com/courses/working-with-dates-and-times-in-r)
-
-## Unit 2 homework - midterm project - progress check (due Sunday, April 7 at 23:59:00)
-
--   Homework files: [Unit 2 homework instructions]
-
-## Lecture 2.4: Multiple Regression (Monday, April 8)
+- *Note the special class time!*
 
 Reading to do before class: Chapter 9
 
@@ -161,22 +163,17 @@ Topics covered:
 
 -   Lecture activity: [Lecture 2.4 activity]
 
-## Lab 2.2: Interpreting coefficients (Tuesday, April 9)
+## Online lab 2.3 (due on Friday, September 13 at 11:59:00)
 
--   Lab files: [Lab 2.2]
-    -   Make sure to extract (unzip) the lab files before attempting to modify them!
+- [Modeling with Basic Regression](https://app.datacamp.com/learn/courses/modeling-with-data-in-the-tidyverse)
 
-## Online lab 2.3 (due on Friday, April 12 at 11:59:00)
-
--   [Intermediate Data Visualization with ggplot2](https://app.datacamp.com/learn/courses/intermediate-data-visualization-with-ggplot2)
-
-## Unit 2 homework - midterm project (due Sunday, April 14 at 11:59:00)
+## Unit 2 homework (due Tuesday, September 17 at 11:59:00)
 
 -   Homework files: [Unit 2 homework instructions]
 
 # Unit 3: Measuring uncertainty
 
-## Lecture 3.1: Confidence intervals - proportions (Wednesday, April 10)
+## Lecture 3.1: Confidence intervals - proportions (Thursday, September 19)
 
 Reading to do before class: Chapter 13
 
@@ -194,7 +191,9 @@ Topics covered:
 
 -   Lecture activity: [Lecture 3.1 activity]
 
-## Lecture 3.2: Confidence intervals - means (Monday, April 15)
+## Lecture 3.2: Confidence intervals - means (Friday, September 20)
+
+- *Note the special class time!*
 
 Reading to do before class: Chapter 14
 
@@ -212,12 +211,7 @@ Topics covered:
 
 -   Lecture activity: [Lecture 3.2 activity]
 
-## Lab 3.1: Sampling (Tuesday, April 16)
-
--   Lab files: [Lab 3.1]
-    -   Make sure to extract (unzip) the lab files before attempting to modify them!
-
-## Lecture 3.3: Hypothesis testing (Wednesday, April 17)
+## Lecture 3.3: Hypothesis testing (Saturday, September 21)
 
 Reading to do before class: Chapter 15
 
@@ -233,11 +227,11 @@ Topics covered:
 
 -   Lecture activity: [Lecture 3.3 activity]
 
-## Unit 3 homework - progress check (due Sunday, April 21 at 23:59:00)
+## Unit 3 homework - progress check (due Sunday, September 22 at 23:59:00)
 
 -   Homework files: [Unit 3 homework instructions]
 
-## Lecture 3.4: Hypothesis testing wisdom (Monday, April 22)
+## Lecture 3.4: Hypothesis testing wisdom (Tuesday, September 24)
 
 Reading to do before class: Chapter 16
 
@@ -257,17 +251,17 @@ Topics covered:
 
 -   Lecture activity: [Lecture 3.4 activity]
 
-## Lab 3.2: Bootstrapping (Tueday, April 23)
+## Lab 3.1: Bootstrapping (Wednesday, September 25)
 
 -   Lab files: [Lab 3.2]
 
-## Unit 3 homework (due Sunday, April 28 at 23:59:00)
+## Unit 3 homework (due Sunday, October 6 at 23:59:00)
 
 -   Homework files: [Unit 3 homework instructions]
 
 # Unit 4: Statistical inference
 
-## Lecture 4.1: Comparing groups (Wednesday, April 24)
+## Lecture 4.1: Comparing groups (Thursday, September 26)
 
 Reading to do before class: Chapter 17
 
@@ -285,7 +279,7 @@ Topics covered:
 
 -   Lecture activity: [Lecture 4.1 activity]
 
-## Lecture 4.2: Returning to regression (Monday, April 29)
+## Lecture 4.2: Returning to regression (Tuesday, October 8)
 
 Reading to do before class: Chapter 20
 
@@ -301,11 +295,11 @@ Topics covered:
 
 -   Lecture activity: [Lecture 4.2 activity]
 
-## Lab 4.1: Model building (Tueday, April 30)
+## Lab 4.1: Model building (Wednesday, October 9)
 
--   Lab cancelled
+-   Lab tbd
 
-## Final class 4.3: Interpretation activity (Thursday, May 2)
+## Final class 4.3: Interpretation activity (Thursday, October 10)
 
 -   How to read academic statistical results
 
@@ -317,10 +311,15 @@ Topics covered:
 
 -   Final class activity: [Final class 4.3 activity]
 
-## Unit 4 homework - paper analysis (due Sunday, May 5 at 23:59:00)
+## Online lab 4.1 (due on Friday, October 11 at 11:59:00)
 
--   Homework files: [Unit 4 homework - paper analysis instructions]
+- Your choice of any DataCamp course (as long as it relates to statistics)
+  + Send the completion certificate from the end of the course
 
-## Final project (due Wednesday, May 8 at 23:59:00)
+## Final project - progress check (due Sunday, October 13 at 23:59:00)
+
+-   Homework files: [Final project instructions]
+
+## Final project (due Wednesday, October 16 at 23:59:00)
 
 -   Homework files:  [Final project instructions]
