--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -41,7 +41,7 @@ Topics covered:
 
 -   Lecture activity: [Lecture 1.2 activity]
 
-## Online lab 1.1 (due Sunday, March 25 at 11:59:00 pm)
+## Online lab 1.1 (due Sunday, August 25 at 11:59:00 pm)
 
 -   [Introduction to R](https://learn.datacamp.com/courses/free-introduction-to-r)
 -   [Introduction to the Tidyverse](https://learn.datacamp.com/courses/introduction-to-the-tidyverse)
@@ -120,9 +120,9 @@ Topics covered:
 
 -   Homework files: [Unit 2 homework instructions]
 
-## Lab 2.1: Working with regressions (Wednesday, September 11)
+## Lab 2.1: Working with tables in Quarto (Wednesday, September 11)
 
--   Lab files: [Lab 2.1](labs/Lab 2.1/lab.2.1.zip)
+-   Lab files: [Lab 2.1]()
     -   Make sure to extract (unzip) the lab files before attempting to modify them!
 
 ## Lecture 2.3: Regression Wisdom (Thursday, September 12)
@@ -165,7 +165,7 @@ Topics covered:
 
 ## Online lab 2.3 (due on Friday, September 13 at 11:59:00)
 
-- [Modeling with Basic Regression](https://app.datacamp.com/learn/courses/modeling-with-data-in-the-tidyverse)
+- [Modeling with Data in the Tidyverse](https://app.datacamp.com/learn/courses/modeling-with-data-in-the-tidyverse)
 
 ## Unit 2 homework (due Tuesday, September 17 at 11:59:00)
 
