--- a/homeworks/Unit 1 homework/Homework 1 instructions.qmd
+++ b/homeworks/Unit 1 homework/Homework 1 instructions.qmd
@@ -139,4 +139,4 @@ Finally, the organizing committee is interested in whether there is any relation
 
 ### Q8: Putting it all together (15 points)
 
-Through the analysis conducted in the previous section **and through at least one additional investigation of your own (which can be an additional graph or table, that analyzes a different relationship or distribution than one asked about in the questions above but you think is meaningful and important to communicate to the organizing committee)**, write three paragraphs outlining what you think are the main findings of questions 1-7 plus your additional investigation. What would you recommend to your boss as to what types of boats sell for the most money? What information are we missing in this dataset that we would need to better understand boat price?
+Through the analysis conducted in the previous section **and through at least one additional investigation of your own (which can be an additional graph or table, that analyzes a different relationship or distribution than one asked about in the questions above but you think is meaningful and important to communicate to the organizing committee)**, write three paragraphs outlining what you think are the main findings of questions 1-7 plus your additional investigation. What would you recommend to your organizing committee as to how to improve your country's performance at the next Olympics? What are some important factors and relationships you discovered that you think they ought to pay attention to? What are some next steps and additional data that are needed to deepen this analysis?
