--- a/homework.qmd
+++ b/homework.qmd
@@ -4,6 +4,7 @@ title: "Homework"
 
 # Unit 1 homework (due Sunday, September 1 at 23:59:00): [Unit 1 homework]
 
+  - [Unit 1 homework](homeworks/Unit 1 homework/homework1.zip)
   - [Unit 1 homework sample solutions]
 
 # Unit 2 homework (due Tuesday, September 17 at 23:59:00) [Unit 2 homework]
