--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -69,7 +69,7 @@ Topics covered:
 
 ## Unit 1 homework (due September 1 at 23:59:00 pm)
 
--   Homework files: [Unit 1 homework]
+-   Homework files: [Unit 1 homework](homeworks/Unit 1 homework/homework1.zip)
 -   Homework sample solutions: [Unit 1 homework sample solutions]
 
 # Unit 2: Relationships between variables
