--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -58,9 +58,9 @@ Topics covered:
 
 -   Normal percentiles
 
--   Lecture webpage: [Lecture 1.3]
+-   Lecture webpage: [Lecture 1.3](https://andrewm.shinyapps.io/fall2024advanceddistributions)
 
--   Lecture activity: [Lecture 1.3 activity]
+-   Lecture activity: [Lecture 1.3 activity](activities/Lecture 1.3/lecture.1.3.activity.zip)
 
 ## Lab 1.2: Advanced Quarto editing (Wednesday, August 28)
 
