--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -64,7 +64,7 @@ Topics covered:
 
 ## Lab 1.2: Advanced Quarto editing (Wednesday, August 28)
 
--   Lab files: [Lab 1.2]
+-   Lab files: [Lab 1.2](labs/Lab 1.2/lab.1.2.zip)
     -   Make sure to extract (unzip) the lab files before attempting to modify them!
 
 ## Unit 1 homework (due September 1 at 23:59:00 pm)
