--- a/homework.qmd
+++ b/homework.qmd
@@ -2,17 +2,19 @@
 title: "Homework"
 ---
 
-# Unit 1 homework (due Sunday, September 1 at 23:59:00): [Unit 1 homework]
+# Unit 1 homework (due Sunday, September 1 at 23:59:00) 
 
   - [Unit 1 homework](homeworks/Unit 1 homework/homework1.zip)
   - [Unit 1 homework sample solutions]
 
-# Unit 2 homework (due Tuesday, September 17 at 23:59:00) [Unit 2 homework]
+# Unit 2 homework (due Tuesday, September 17 at 23:59:00) 
 
+  - [Unit 2 homework](homeworks/Unit 2 homework/homework2.zip)
   - [Unit 2 homework sample solutions]
 
-# Unit 3 homework (due Sunday, October 6 at 23:59:00) [Unit 3 homework]
+# Unit 3 homework (due Sunday, October 6 at 23:59:00) 
 
+  - [Unit 3 homework]
   - [Unit 3 homework sample solutions]
 
-# Final project (due Wednesday, October 16 at 23:59:00) [Final project]
+# Final project (due Wednesday, October 16 at 23:59:00) 
