--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -118,7 +118,7 @@ Topics covered:
 
 ## Unit 2 homework - progress check (due Sunday, September 8 at 23:59:00)
 
--   Homework files: [Unit 2 homework instructions]
+-   Homework files: [Unit 2 homework instructions](homeworks/Unit 2 homework/homework2.zip)
 
 ## Lab 2.1: Working with tables in Quarto (Wednesday, September 11)
 
