--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -120,9 +120,9 @@ Topics covered:
 
 -   Homework files: [Unit 2 homework instructions](homeworks/Unit 2 homework/homework2.zip)
 
-## Lab 2.1: Working with tables in Quarto (Wednesday, September 11)
+## Lab 2.1: Working with regressions using `dplyr` (Wednesday, September 11)
 
--   Lab files: [Lab 2.1]()
+-   Lab files: [Lab 2.1](labs/Lab 2.1/lab.2.1.zip)
     -   Make sure to extract (unzip) the lab files before attempting to modify them!
 
 ## Lecture 2.3: Regression Wisdom (Thursday, September 12)
