--- a/homework.qmd
+++ b/homework.qmd
@@ -5,7 +5,7 @@ title: "Homework"
 # Unit 1 homework (due Sunday, September 1 at 23:59:00) 
 
   - [Unit 1 homework](homeworks/Unit 1 homework/homework1.zip)
-  - [Unit 1 homework sample solutions]
+  - [Unit 1 homework sample solutions](homeworks/Unit 1 homework/solutions/homework1.solutions.zip)
 
 # Unit 2 homework (due Tuesday, September 17 at 23:59:00) 
 
@@ -14,7 +14,7 @@ title: "Homework"
 
 # Unit 3 homework (due Sunday, October 6 at 23:59:00) 
 
-  - [Unit 3 homework]
+  - [Unit 3 homework](homeworks/Unit 3 homework/homework3.zip)
   - [Unit 3 homework sample solutions]
 
 # Final project (due Wednesday, October 16 at 23:59:00) 
