--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -70,7 +70,7 @@ Topics covered:
 ## Unit 1 homework (due September 1 at 23:59:00 pm)
 
 -   Homework files: [Unit 1 homework](homeworks/Unit 1 homework/homework1.zip)
--   Homework sample solutions: [Unit 1 homework sample solutions]
+-   Homework sample solutions: [Unit 1 homework sample solutions](homeworks/Unit 1 homework/solutions/homework1.solutions.zip)
 
 # Unit 2: Relationships between variables
 
@@ -169,7 +169,7 @@ Topics covered:
 
 ## Unit 2 homework (due Tuesday, September 17 at 11:59:00)
 
--   Homework files: [Unit 2 homework instructions]
+-   Homework files: [Unit 2 homework instructions](homeworks/Unit 2 homework/homework2.zip)
 
 # Unit 3: Measuring uncertainty
 
@@ -187,9 +187,9 @@ Topics covered:
 
 -   Interpreting a confidence interval
 
--   Lecture webpage: [Lecture 3.1]
+-   Lecture webpage: [Lecture 3.1](https://andrewm.shinyapps.io/fall2024confintprop/)
 
--   Lecture activity: [Lecture 3.1 activity]
+-   Lecture activity: [Lecture 3.1 activity](activities/Lecture 3.1/lecture.3.1.activity.zip)
 
 ## Lecture 3.2: Confidence intervals - means (Friday, September 20)
 
@@ -229,7 +229,7 @@ Topics covered:
 
 ## Unit 3 homework - progress check (due Sunday, September 22 at 23:59:00)
 
--   Homework files: [Unit 3 homework instructions]
+-   Homework files: [Unit 3 homework instructions](homeworks/Unit 3 homework/homework3.zip)
 
 ## Lecture 3.4: Hypothesis testing wisdom (Tuesday, September 24)
 
@@ -257,7 +257,7 @@ Topics covered:
 
 ## Unit 3 homework (due Sunday, October 6 at 23:59:00)
 
--   Homework files: [Unit 3 homework instructions]
+-   Homework files: [Unit 3 homework instructions](homeworks/Unit 3 homework/homework3.zip)
 
 # Unit 4: Statistical inference
 
