--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -247,9 +247,9 @@ Topics covered:
 
 - Power of a test
 
--   Lecture webpage: [Lecture 3.4]
+-   Lecture webpage: [Lecture 3.4](https://andrewm.shinyapps.io/fall2024hyptestwisdom/)
 
--   Lecture activity: [Lecture 3.4 activity]
+-   Lecture activity: [Lecture 3.4 activity](activities/Lecture 3.4lecture.3.4.activity.zip)
 
 ## Lab 3.1: Bootstrapping (Wednesday, September 25)
 
