--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -249,7 +249,7 @@ Topics covered:
 
 -   Lecture webpage: [Lecture 3.4](https://andrewm.shinyapps.io/fall2024hyptestwisdom/)
 
--   Lecture activity: [Lecture 3.4 activity](activities/Lecture 3.4lecture.3.4.activity.zip)
+-   Lecture activity: [Lecture 3.4 activity](activities/Lecture 3.4/lecture.3.4.activity.zip)
 
 ## Lab 3.1: Bootstrapping (Wednesday, September 25)
 
