--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -275,9 +275,9 @@ Topics covered:
 
 -   Two-sample $t$ test
 
--   Lecture webpage: [Lecture 4.1]
+-   Lecture webpage: [Lecture 4.1](https://andrewm.shinyapps.io/fall2024comparinggroups/)
 
--   Lecture activity: [Lecture 4.1 activity]
+-   Lecture activity: [Lecture 4.1 activity](activities/Lecture 4.1/lecture.4.1.activity.zip)
 
 ## Lecture 4.2: Returning to regression (Tuesday, October 8)
 
