--- a/schedulematerials.qmd
+++ b/schedulematerials.qmd
@@ -291,9 +291,9 @@ Topics covered:
 
 -   Confidence and prediction intervals
 
--   Lecture webpage: [Lecture 4.2]
+-   Lecture webpage: [Lecture 4.2](https://andrewm.shinyapps.io/fall2024return2regression/)
 
--   Lecture activity: [Lecture 4.2 activity]
+-   Lecture activity: [Lecture 4.2 activity](activities/Lecture 4.2/lecture.4.2.activity.zip)
 
 ## Lab 4.1: Model building (Wednesday, October 9)
 
